Mouse scroll no longer works on playlist's left tab
Was working on 1.1.x
Was working on 1.1.x
added Component::Interface: Qt Severity::minor Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
added Status::fixed label
changed milestone to %2.0.2
closed
commit 16c1b291 Author: Jean-Baptiste Kempf jb@videolan.org Date: Tue May 15 16:15:16 2012 +0200
Qt: correctly handle mousewheel in selector
Close [#6812](https://code.videolan.org/videolan/vlc/-/issues/6812)
Original author: jb@videolan.org
VideoLAN code repository instance