Qt: correctly handle mousewheel in selector

Close #6812